--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -124,15 +124,15 @@ import Layout from "../layouts/Layout.astro";
             <img src="/nebs1.jpg" alt="Gallery Image 1" loading="lazy">
             <img src="/nebs2.jpg" alt="Gallery Image 2" loading="lazy">
             <img src="/nebs3.jpg" alt="Gallery Image 3" loading="lazy">
-            <img src="/nebs4.jpg" alt="Gallery Image 4" loading="lazy">
+            <img src="/whiskey1.jpg" alt="Gallery Image 4" loading="lazy">
             <img src="/nebs5.jpg" alt="Gallery Image 5" loading="lazy">
             <img src="/nebs6.jpg" alt="Gallery Image 6" loading="lazy">
             <img src="/nebs7.jpg" alt="Gallery Image 7" loading="lazy">
             <img src="/nebs8.jpg" alt="Gallery Image 8" loading="lazy">
             <img src="/nebs9.jpg" alt="Gallery Image 9" loading="lazy">
-            <img src="/nebs10.jpg" alt="Gallery Image 10" loading="lazy">
-            <img src="/nebs11.jpg" alt="Gallery Image 11" loading="lazy">
-            <img src="/nebs12.jpg" alt="Gallery Image 12" loading="lazy">
+            <img src="/brandy1.jpg" alt="Gallery Image 10" loading="lazy">
+            <img src="/goat.jpg" alt="Gallery Image 11" loading="lazy">
+            <img src="/ena.jpg" alt="Gallery Image 12" loading="lazy">
         </div>
     </div>
 </Layout>
